2007-08-30  Dan Williams  <dcbw@redhat.com>

	Patch from Jani Monoses <jani@ubuntu.com>

	* nm-applet.desktop
		- show in XFCE too (gnome.org #471608)

2007-08-29  Dan Williams  <dcbw@redhat.com>

	* nm-applet.conf
		- New D-Bus service name

	* src/applet-marshal.list
	  src/applet-marshal-main.c
	  src/applet-dbus-manager.c
	  src/applet-dbus-manager.h
	  src/applet.h
	  src/applet.c
	  src/Makefile.am
	  configure.ac
		- Move most D-Bus housekeeping over to the D-Bus manager rather
		than a lot of hardcoded junk in applet-dbus.c and applet-dbus-info.c

	* src/nm-utils.c
	  src/nm-utils.h
		- Remove functions that are no longer used

	* src/applet-dbus-info.c
	  src/applet-dbus-info.h
	  src/applet-dbus.c
	  src/applet-dbus.h
		- Remove, no longer used; some bits need to be replaced by Tambet's new
		VPN interface stuff

	* src/applet-dbus-settings.c
		- Hook up the new NMConnection/NMSettings stuff to D-Bus

	* src/menu-items.c
		- Remove no longer relevant bits

2007-08-29  Dan Williams  <dcbw@redhat.com>

	* src/gconf-helpers.c
		- (nm_gconf_get_bytearray_helper): make it really a byte array.  Code
			was previously appending ints, leading to 3 zero elements for each
			actual data element

2007-08-29  Dan Williams  <dcbw@redhat.com>

	Remove anything related to wireless-security-options, to be replaced
	by NMSettings/NMConnectionSettings.

2007-08-29  Dan Williams  <dcbw@redhat.com>

	* src/applet.c
	  src/other-network-dialog.c
	  src/menu-items.c
		- Adjust for new AP flags

2007-08-22  Dan Williams  <dcbw@redhat.com>

	* src/applet.c
		- (ap_hash): fix missing return value, cleanups
		- (nma_add_networks_helper): don't try to free uninitialized memory
			if the ssid was NULL, don't try to free a NULL ssid
		- (foo_bssid_strength_changed): don't try to free a NULL ssid
		- (foo_wireless_state_change): handle NULLs better

2007-08-22  Dan Williams  <dcbw@redhat.com>

	* src/menu-items.c
	  src/menu-items.h