@@ -2,6 +2,14 @@
 
 	Patch from Jani Monoses <jani@ubuntu.com>
 
+	* src/applet.c
+		- (about_dialog_activate_link_cb): don't use gnome_url_open()
+		(gnome.org #460671)
+
+2007-08-30  Dan Williams  <dcbw@redhat.com>
+
+	Patch from Jani Monoses <jani@ubuntu.com>
+
 	* nm-applet.desktop
 		- show in XFCE too (gnome.org #471608)
 
